--- a/css/halls.css
+++ b/css/halls.css
@@ -2,15 +2,15 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 20px;
+  gap: 15px;
 }
 
 .halls__card {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 580px;
-  height: 349px;  
+  width: 571px;
+  height: 340px;  
 }
 
 .halls__card_title {
@@ -43,10 +43,10 @@
 }
 
 
-@media (max-width: 1200px) {
+@media (max-width: 1024px) {
   .halls__card {
-    width: 440px;
-    height: 265px;  
+    width: 435px;
+    height: 260px;  
   }
 
   .halls__card_title {
@@ -59,6 +59,12 @@
   .halls__card {
     width: 330px;
     height: 197px;  
+  }
+  
+  .halls__card_title {
+    width: 121px;
+    font-size: 40px;
+    line-height: 50px;
   }
 }
 
@@ -74,7 +80,7 @@
   }
 
   .halls__card_title {
-    width: 100px;
+    width: 85px;
     font-size: 26px;
     line-height: 34px;
   }
