--- a/css/feedback.css
+++ b/css/feedback.css
@@ -101,6 +101,10 @@
 }
 
 @media (max-width: 480px) {
+  .feedback {
+    padding: 15px 0;
+  }
+
   .feedback__item {
     flex-direction: column;
   }
@@ -116,14 +120,14 @@
 
   .feedback__item_text {
     max-width: 393px;
-    font-size: 16px;
-    line-height: 22px;
+    font-size: 12px;
+    line-height: 16px;
     padding-top: 35px;
   }
 
   .feedback__item_desc {
-    font-size: 16px;
-    line-height: 22px;
+    font-size: 14px;
+    line-height: 20px;
   }
   
   .feedback__item_image {
