--- a/css/about.css
+++ b/css/about.css
@@ -133,7 +133,7 @@ color: var(--main-color);
 
 @media (max-width: 768px) {
   .about__content {
-    grid-template-rows: 380px 126px 78px;
+    grid-template-rows: 380px 85px 78px;
     gap: 31px 28px;
   }
 
@@ -151,14 +151,17 @@ color: var(--main-color);
   }
 
   .about__text {
-    grid-column: 1 / 3;
+    grid-column: 1 / 2;
     grid-row: 2 / 3;
   }
 
-  .about__tagline {
+  .about__tagline p {
+    width: 700px;
     font-size: 32px;
     line-height: 36px;
-    margin-bottom: 16px;   
+    margin-bottom: 16px;
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
   }
 
   .about__quote:before {
@@ -168,7 +171,12 @@ color: var(--main-color);
   .about__tagline:after {
     height: 21px;
     background-position-y: 10px;
-  }   
+  } 
+  
+  .about__tagline p:after {
+    left: 527px;
+    bottom: 25px;
+  } 
 
   .about__founder {
     grid-column: 1 / 3;
@@ -184,7 +192,7 @@ color: var(--main-color);
 @media (max-width: 480px) {
   .about__content {
     grid-template-columns: 1fr;
-    grid-template-rows: 127px 280px 100px 56px;
+    grid-template-rows: 127px 280px 90px 56px;
     gap: 20px 0;
   }
   
@@ -194,26 +202,45 @@ color: var(--main-color);
   }
 
   .about__content_desc-text {
-    grid-column: 1 / 2;
+    width: 280px;
     grid-row: 1 / 2;
     font-size: 12px;
     line-height: 16px;
   }
 
-  .about__text {
-    grid-column: 1 / 3;
-    grid-row: 3 / 4;
+  .about__tagline {
+    margin-bottom: 9px;
+    grid-row: 3 / 4;   
   }
 
-  .about__tagline {
+  .about__tagline p {
+    width: 280px;
     font-size: 18px;
     line-height: 26px;
-    margin-bottom: 9px;   
   }
+  
+  .about__quote:before {
+    height: 15px;
+  }
+
+  .about__tagline:after {
+    height: 21px;
+    background-position-y: 10px;
+  } 
+  .about__tagline p:before {
+    left: -35px;
+    top: 20px;
+    font-size: 39px;
+  }
+  
+  .about__tagline p:after {
+    left: 135px;
+    bottom: 24px;
+    font-size: 39px;
+  } 
     
   .about__founder {
     padding-left: 0;
-    grid-column: 1 / 3;
     grid-row: 4 / 5;    
   }
 
