--- a/css/footer.css
+++ b/css/footer.css
@@ -62,7 +62,7 @@
   color: var(--next-color);
 }
 
-.contacts__link:focus {
+.contacts__link svg:focus {
   color: var(--next-color);
   border: 1px solid var(--add-color);
   outline: none;
