--- a/css/hero.css
+++ b/css/hero.css
@@ -110,7 +110,7 @@
   background-color: var(--main-color);
   border: none;
   border-radius: 10px;
-  box-shadow: 0px 0px 10px 5px hsla(288, 97%, 27%, 0.6);
+  box-shadow: 0px 0px 10px 5px var(--main-color);
   transition: .3s ease-in-out;
   z-index: 3;  
 }
@@ -229,42 +229,51 @@
   }  
 }
 
-@media (max-width: 767px) {  
+@media (max-width: 730px) {  
   .hero__wrapper:before {
-    left: 120px;
+    left: 185px;
   }
 }
 
-@media (max-width: 480px) {
-  .hero {
-    height: 204px;
-    padding: 0;
-    padding-top: 20px;    
-  }
-  
-  .hero__title {
-    font-size: 35px;
-    letter-spacing: -0.08em;
-    margin-bottom: 6px;
+@media (max-width: 630px) {  
+  .hero__wrapper:before {
+    left: 110px;
   }
   
   .hero__subtitle {
-    font-size: 10px;
+    padding-left: 80px;
+  }
+}
+
+@media (max-width: 560px) {  
+  .hero {
+    height: 305px;    
+  }
+  
+  .hero__title {
+    font-size: 60px;
+    letter-spacing: -0.08em;
+    margin-bottom: 10px;
+  }
+  
+  .hero__subtitle {
+    font-size: 15px;
     line-height: 14px;
     padding-left: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
   }
   
   .hero__wrapper:before {
     width: 161px;
     height: 179px;
-    left: 120px;
-    top: 23px;
+    left: 220px;
+    top: 35px;
   }
   
   .hero__block {
     gap: 23px;
     margin-bottom: 30px;
+    padding-left: 20px;
   }
   
   .hero__block_title {
@@ -282,5 +291,33 @@
     line-height: 12px;
     padding: 8px 13px;
     border-radius: 4px;
+    margin-left: 20px;    
+  }
+}
+
+@media (max-width: 320px) {  
+  .hero {
+    height: 204px;
+    padding: 0;
+    padding-top: 20px;    
+  }
+  
+  .hero__title {
+    font-size: 35px;
+    margin-bottom: 6px;
+  }
+  
+  .hero__subtitle {
+    font-size: 10px;
+    margin-bottom: 10px;
+  }
+  
+  .hero__wrapper:before {
+    left: 120px;
+    top: 23px;
+  }
+    
+  .hero__btn {
+    margin-left: 0;
   }
 }
