--- a/css/booking.css
+++ b/css/booking.css
@@ -116,7 +116,7 @@ input[type="radio"]:not(:checked) + label:before {
     content: "";
     position: absolute;
     left: 0px;
-    top: 1px;
+    top: -4px;
     width: 27px;
     height: 27px;
     background-color: #ffffff;
@@ -147,9 +147,10 @@ input[type="checkbox"]:checked + label:after,
 input[type="checkbox"]:not(:checked) + label:after,
 input[type="radio"]:checked + label:after, 
 input[type="radio"]:not(:checked) + label:after {
-    left: 0;
-    width: 29px;
-    height: 29px;
+    left: -1px;
+    top: -5px;
+    width: 30px;
+    height: 30px;
     border: 1px solid var(--add-color);
 }
 
