--- a/css/modal.css
+++ b/css/modal.css
@@ -1,53 +1,58 @@
 .modal {
-  display: none;
+  display: block;
+  position: absolute;
+  left: 50%;
+  top: 145px;
+  width: 600px;
+  height: 498px;
+  background-color: var(--bg-color);
+  z-index: 3;
+  margin-left: -300px;
 }
 
-@media (max-width: 768px) {
-  .modal {
-    display: block;
-    position: absolute;
-    left: 50%;
-    top: 145px;
-    width: 600px;
-    height: 498px;
-    background-color: var(--bg-color);
-    z-index: 3;
-    margin-left: -300px;
-  }
+.modal__close {
+  background-image: url(../img/close.png);
+  width: 42px;
+  height: 42px;
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  border: none;
+  background-color: transparent;
+}
 
-  .modal__title {
-    padding-top: 60px;
-    font-size: 22px;
-    line-height: 30px;
-    margin-bottom: 40px;
-  }
+.modal__title {
+  padding-top: 60px;
+  font-size: 22px;
+  line-height: 30px;
+  margin-bottom: 40px;
+}
 
-  .modal__date {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
+.modal__date {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
-  .modal__date input{
-    width: 280px;
-    height: 52px;
-    margin-bottom: 40px;
-  }
+.modal__date input{
+  width: 280px;
+  height: 52px;
+  margin-bottom: 40px;
+}
 
-  .modal__date label {
-    font-size: 14px;
-    line-height: 16px;
-  }
+.modal__date label {
+  font-size: 14px;
+  line-height: 16px;
+}
 
-  .modal__btn {    
-    font-weight: 700;
-    font-size: 22px;
-    color: var(--main-color);
-    padding: 16px 52px;
-    border: none;
-    border-radius: 10px;
-    text-transform: uppercase;
-    display: block;
-    margin: 0 auto;
-  }
+.modal__btn {    
+  font-weight: 700;
+  font-size: 22px;
+  color: var(--main-color);
+  padding: 16px 52px;
+  border: none;
+  border-radius: 10px;
+  text-transform: uppercase;
+  display: block;
+  margin: 0 auto;
 }
