--- a/css/modal.css
+++ b/css/modal.css
@@ -9,7 +9,7 @@
   width: 600px;
   height: 498px;
   background-color: var(--bg-color);
-  z-index: 3;
+  z-index: 999;
   margin-left: -300px;
   visibility: visible;
   opacity: 1;
@@ -64,7 +64,7 @@
 }
 
 .overlay {
-  z-index: 2;
+  z-index: 99;
   position: fixed;
   background-color: #1B1A1B;
   opacity: 0.7;
@@ -72,6 +72,5 @@
 	height: 100vh;
   top: 0;
   left: 0;
-  cursor: pointer;
-  /* display: none; */
+  display: none;
 }
