--- a/css/modal.css
+++ b/css/modal.css
@@ -7,13 +7,12 @@
   left: 50%;
   top: 7%;
   width: 600px;
-  height: 498px;
   background-color: var(--bg-color);
   z-index: 999;
   visibility: visible;
   opacity: 1;
   transition: .3s;
-  transform: translate(-50%, -50%); /* центрируем модальное окно +left и top */
+  transform: translate(-50%, -50%);
 }
 
 .modal-close {
@@ -27,8 +26,11 @@
   background-color: transparent;
 }
 
+.modal__content {
+  padding: 60px 0 80px 0;
+}
+
 .modal__title {
-  padding-top: 60px;
   font-size: 22px;
   line-height: 30px;
   margin-bottom: 40px;
