--- a/css/burger.css
+++ b/css/burger.css
@@ -1,4 +1,71 @@
-.navigation {
-  width: 688px;
+.burger {
+  visibility: hidden;
+  width: 54px;
+  height: 29px;
+  background-color: transparent;
+  border: none;
+  background: url('../img/burger.png') no-repeat;
+  background-size: cover;
+  transition: .3s ease-in-out;
+}
+
+.burger:hover {
+  background-image: url('../img/burger-hover.png');  
+}
+
+.burger:focus {
+  background-image: url('../img/burger-focus.png');
+  width: 39px;
+  height: 39px;
+}
+
+.burger:active {
+  background-image: url('../img/burger-active.png');  
+}
+
+.popup {
+  position: fixed;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
   background-color: #1B1A1B;
+  z-index: 100;
+  display: flex;
+  transition: 0.3s;
+}
+
+.popup.active {
+  left: 0;
+}
+
+.popup .header__list {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 22px;
+  gap: 39px;
+  padding-top: 58px;
+}
+
+@media (max-width: 1023px) {
+  .burger {
+    visibility: visible;
+  }
+}
+
+@media (max-width: 767px) {
+  .burger {
+    width: 39px;
+    height: 20px;
+  }
+}
+
+@media (max-width: 480px) {
+  .popup .header__list {
+    font-size: 14px;
+    gap: 26px;
+  }
 }
