--- a/css/burger.css
+++ b/css/burger.css
@@ -1,19 +1,40 @@
 .burger {
-  visibility: hidden;
-  width: 54px;
-  height: 29px;
+  display: none;
+  width: 60px;
+  height: 60px;
+  position: relative;
   background-color: transparent;
-  border: none;
-  background: url('../img/burger.png') no-repeat;
-  background-size: cover;
   transition: .3s ease-in-out;
+  overflow: hidden;
+  border: none;
 }
 
-.burger:hover {
-  background-image: url('../img/burger-hover.png');  
+.burger span {
+  width: 54px;
+  height: 5px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: var(--main-color);
+  position: absolute;
+  border-radius: 2px;
 }
 
-.burger:focus {
+.burger span:nth-of-type(2) {
+  top: calc(50% - 12px);
+}
+
+.burger span:nth-of-type(3) {
+  top: calc(50% + 12px);
+  left: calc(50% - 12px);  
+  width: 31px;
+}
+
+.burger span:hover {
+  background-color: var(--add-color);
+}
+
+/* .burger:focus {
   background-image: url('../img/burger-focus.png');
   width: 39px;
   height: 39px;
@@ -21,7 +42,7 @@
 
 .burger:active {
   background-image: url('../img/burger-active.png');  
-}
+} */
 
 .popup {
   position: fixed;
@@ -30,8 +51,9 @@
   width: 100%;
   height: 100%;
   background-color: #1B1A1B;
-  z-index: 100;
+  z-index: 10;
   display: flex;
+  justify-content: center;
   transition: 0.3s;
 }
 
@@ -39,7 +61,7 @@
   left: 0;
 }
 
-.popup .header__list {
+.popup.active .header__nav {
   width: 100%;
   height: 100%;
   display: flex;
@@ -48,18 +70,19 @@
   font-size: 22px;
   gap: 39px;
   padding-top: 58px;
+  z-index: 100;
 }
+
+.popup.active .header__link:hover {
+  width: 100%;
+  height: 100%;
+  background-color: var(--main-color);
+}
+
 
 @media (max-width: 1023px) {
   .burger {
-    visibility: visible;
-  }
-}
-
-@media (max-width: 767px) {
-  .burger {
-    width: 39px;
-    height: 20px;
+    display: block;
   }
 }
 
@@ -67,5 +90,20 @@
   .popup .header__list {
     font-size: 14px;
     gap: 26px;
+  }
+
+  .burger span {
+    width: 39px;
+    height: 4px;
+  }
+
+  .burger span:nth-of-type(2) {
+    top: calc(50% - 8px);
+  }
+
+  .burger span:nth-of-type(3) {        
+    top: calc(50% + 8px);
+    left: calc(50% - 8px);  
+    width: 22px;
   }
 }
