--- a/css/header.css
+++ b/css/header.css
@@ -54,13 +54,7 @@
   gap: 39px;
   padding-top: 58px;
   z-index: 100;
-  transform: translate(0);  
-}
-
-.popup.active .navigation__link:hover {
-  width: 100%;
-  height: 100%;
-  background-color: var(--main-color);
+  transform: translateX(0);
 }
 
 .navigation__list {
@@ -69,19 +63,6 @@
   font-size: 22px;
   line-height: 50px;
   text-transform: uppercase;
-}
-
-.navigation__link {
-  transition: .3s ease-in-out;
-}
-
-.navigation__link:hover {
-  color: var(--main-color);
-}
-
-.navigation__link:focus,
-.navigation__link:active {
-  color: var(--secondary-color);
 }
 
 .header__btn {
@@ -143,7 +124,30 @@
     bottom: 0;
     left: 0;
     right: 0;
-    transform: translate(-100%);
+    transform: translateX(-100%);    
+    transition: 0.3s;
+  }
+
+  .navigation__list {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;   
+  }
+  
+  .navigation__item {
+    transition: .3s ease-in-out;
+  }
+
+  .navigation__item:hover {
+    width: 100%;
+    background-color: var(--main-color);
+  }
+
+  .navigation__item:focus,
+  .navigation__item:active {
+    width: 100%;
+    background-color: var(--secondary-color);
   }
 }
 
@@ -159,23 +163,23 @@
     display: none;
   }
 
-  .popup .navigation__list {
+  .navigation__list {
     font-size: 14px;
     gap: 26px;
   }
 
-  .header__burger span {
-    width: 39px;
-    height: 4px;
+  .navigation__item:hover {
+    width: 138px;
+    border: 2px solid var(--main-color);
+    border-radius: 6px;
+    background-color: transparent;
   }
 
-  .header__burger span:nth-of-type(2) {
-    top: calc(50% - 8px);
-  }
-
-  .header__burger span:nth-of-type(3) {        
-    top: calc(50% + 8px);
-    left: calc(50% - 8px);  
-    width: 22px;
+  .navigation__item:focus,
+  .navigation__item:active {
+    width: 138px;
+    border: 2px solid var(--add-color);
+    border-radius: 6px;
+    background-color: transparent;
   }
 }
